--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ deps=
     mypy
     mypy-lang
 commands=
-    mypy hathi_checksum {env:mypy_args:}
+    mypy hathizip {env:mypy_args:}
 
 [testenv:docs]
 changedir=doc
